@@ -131,6 +131,10 @@ cdl_option CYGHWR_HAL_ARM_BIGENDIAN {
     user_value 0
 };
 
+cdl_option CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE {
+    user_value 1
+};
+
 cdl_option CYGOPT_REDBOOT_FLASH_BYTEORDER {
     user_value MSBFIRST
 }
